# FloydWarshall

./: CMakeLists.txt  LICENSE  README.md
FloydWarshall/: ._main.cpp  CMakeLists.txt  README.md  floyd_script.sh  main.cpp
FloydWarshall/data/: small.mtx
FloydWarshall/data/tmp_draft/: five.mtx
FloydWarshall/docs/: gtx1060_specifications.txt
FloydWarshall/docs/profiling/: coa_prof.nvvp  naive_prof.nvvp  sm_prof.nvvp
FloydWarshall/docs/times/: cpu_times_100.txt  cpu_times_10728.txt  cpu_times_1074.txt  cpu_times_1272.txt  cuda_times_100.txt  omp_times_100.txt  omp_times_10728.txt  omp_times_1074.txt  omp_times_1272.txt  omp_times_16320.txt
FloydWarshall/include/: FloydWarshall.cuh  FloydWarshall.hpp  Kernels.cuh
FloydWarshall/include/Graph/: GraphStd.hpp  GraphWeight.hpp
FloydWarshall/include/Host/: PrintExt.hpp
FloydWarshall/include/Host/Classes/: Bitmask.hpp  PropertyClass.hpp
FloydWarshall/include/Host/impl/: Algorithm.i.hpp  Numeric.i.hpp  Terminal.i.hpp
FloydWarshall/src/: ._FloydWarshall.cpp  ._FloydWarshall.cu  FloydWarshall.cpp  FloydWarshall.cu
FloydWarshall/src/Graph/: GraphBase.cpp  GraphWeight.cpp  GraphWeightRead.cpp
FloydWarshall/web_resources/: links.txt
data/tmp_draft/: small.mtx
docs/: tests_on_gtx980_server_cuda_04.txt  times_calculations.numbers
docs/profiling/: README.md  blk_prof.nvvp  coa_prof.nvvp  naive_prof.nvvp
docs/times/: cpu_times_16320.txt  cuda_times_10728.txt  cuda_times_1074.txt  cuda_times_1272.txt  cuda_times_16320.txt
include/: FloydWarshall.hpp  Kernels.cuh
include/Graph/: GraphWeight.i.hpp
include/Host/: Basic.hpp  Numeric.hpp  Terminal.hpp
include/Host/Classes/impl/: Bitmask.i.hpp
include/Host/impl/: Metaprogramming.i.hpp
src/: FloydWarshall.cu
src/Graph/: GraphStd.cpp
src/Host/: PrintExt.cpp
